--- a/bevy-app/Cargo.toml
+++ b/bevy-app/Cargo.toml
@@ -6,7 +6,7 @@ members = [
 default-members = ["crates/viewer"]
 
 [patch.crates-io]
-naga = { git = "https://github.com/bevy-rust-gpu/naga", branch = "spv-in-break-if-v0.11.0" }
+naga = { git = "https://github.com/gfx-rs/naga" }
 
 #bevy = { path = "../../../bevy" }
 bevy = { git = "https://github.com/bevy-rust-gpu/bevy", branch = "bevy-rust-gpu-dev" }
